--- a/README
+++ b/README
@@ -1,8 +1,11 @@
-This is a sample tab based Android appliction that I created for a presentation at our local PenguinsUnbound group. http://www.penguinsunbound.org/Future_Meetings/20090627_-_Android
+Enjoy and learn from this code! This is a sample tab based Android appliction that I created for the Twin Cities Google Technology User's Group on September 1st, 2009. Details of the presentation can be found at: http://tc-gtug.org/node/6
 
-To find out more about Android programming, would like a presentation of mobile development or are in need consulting services around mobile applications (iPhone, Android and Blackberry) please contact me at justin@localtone.com.
+To find out more about Android programming, would like a presentation of mobile development or are in need consulting services around mobile applications (iPhone, Android, Blackberry and Palm Pre) please contact me at justin@recursiveawesome.com
 
 Thanks,
-Justin Grammens
-Localtone Interactive
-justin@localtone.com
+<=======================================>
+Justin Grammens | Co-Founder
+Recursive Awesome, LLC | Producers of Mobile VidHub
+http://recursiveawesome.com | http://mobilevidhub.com
+direct - 612.722.2795 | twitter - @JustinGrammens
+<=======================================>
