--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, PenguinsUnbound!</string>
-    <string name="app_name">Penguins Unbound</string>
+    <string name="app_name">Twin Cities Google Technology Users Group</string>
     <string name ="no_feeds">Sorry, there are no items in the What&apos;s New RSS feed.</string>
 </resources>
